# argent

./: .gitignore  Argent.sln  CMakeLists.txt  README.md
Argent/: Argent.h  CMakeLists.txt  CVARs.cpp  CVARs.h  VulkanTest.cpp
Argent/Assets/: CMakeLists.txt  ModelFormat.h  ModelLoader.h  TextureLoader.h  Vertex.h
Argent/ECS/: Archetypes.cpp  Archetypes.h  Component.cpp  Component.h  ECS.h  ECSTypes.h  Entity.h  Graph.h  IDRegistry.cpp  IDRegistry.h  World.cpp  World.h
Argent/Renderer/: ArgentVk.h  Descriptors.cpp  Descriptors.h
Argent/TestShaders/: compile.bat  triangle.frag  triangle.vert  trianglef.spv  trianglev.spv
Argent/Tests/: ECSTests.cpp
